kubernetes/greeter-client-istio.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: greeter-client-istio
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: greeter-client-istio
    spec:
      containers:
      - name: greeter-client
        image: gcr.io/grpc-loadbalancing-demo2018/greeter_client:latest
