kubernetes/greeter-client-lookaside-lb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: greeter-client-lookaside-lb
spec:
  containers:
  - name: greeter-client-lookaside-lb
    image: gcr.io/grpc-loadbalancing-demo2018/greeter_client:latest
  restartPolicy: Never
