kubernetes/greeter-client-round-robin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: greeter-client-round-robin
spec:
  containers:
  - name: greeter-client-round-robin
    image: gcr.io/grpc-loadbalancing-demo2018/greeter_client_round_robin:latest
  restartPolicy: Never
