kubernetes/greeter-client-with-envoy-dynamic.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: greeter-client-with-envoy-dynamic
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: greeter-client-with-envoy-dynamic
    spec:
      containers:
      - name: greeter-client
        image: gcr.io/grpc-loadbalancing-demo2018/greeter_client:latest
