kubernetes/greeter-client-with-envoy-proxy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: greeter-client-with-envoy-proxy
spec:
  containers:
  - name: greeter-client
    image: gcr.io/grpc-loadbalancing-demo2018/greeter_client:latest
  - name: envoy-proxy
    image: gcr.io/grpc-loadbalancing-demo2018/envoy_proxy:latest
  restartPolicy: Never
