kubernetes/greeter-client-with-envoy-static.yaml
apiVersion: v1
kind: Pod
metadata:
  name: greeter-client-with-envoy-static
spec:
  containers:
  - name: greeter-client
    image: gcr.io/grpc-loadbalancing-demo2018/greeter_client:latest
  - name: envoy-proxy
    image: gcr.io/grpc-loadbalancing-demo2018/greeter_envoy_static:latest
  restartPolicy: Never
