kubernetes/greeter-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: greeter-client
spec:
  containers:
    - name: greeter-client
      image: gcr.io/grpc-loadbalancing-demo2018/greeter_client:latest
  restartPolicy: Never
