kubernetes/greeter-server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: greeter-server
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: grpclb-demo
        tier: backend
    spec:
      containers:
      - name: greeter-server
        image: gcr.io/grpc-loadbalancing-demo2018/greeter_server:latest
        ports:
        - containerPort: 8000
