kubernetes/greeter-server-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-server-loadbalanced
spec:
  clusterIP: None  # Headless service
  ports:
  - name: grpclb
    port: 9000
  selector:
    app: greeter-server-loadbalanced
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: greeter-server-loadbalanced
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: greeter-server-loadbalanced
    spec:
      containers:
      - name: greeter-server
        image: gcr.io/grpc-loadbalancing-demo2018/greeter_server_balancer:latest
        ports:
        - containerPort: 9000
