kubernetes/greeter-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-server
spec:
  clusterIP: None  # Headless service
  #type: LoadBalancer  # Loadbalanced
  ports:
  - port: 8000
  selector:
    app: grpclb-demo
