kubernetes/greeter-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-server
spec:
  # Make this a headless service so that each endpoint will be exposed
  # as a separate DNS A record.
  clusterIP: None
  ports:
  - port: 8000
  selector:
    app: greeter-server
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: greeter-server
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: greeter-server
    spec:
      containers:
      - name: greeter-server
        image: gcr.io/grpc-loadbalancing-demo2018/greeter_server:latest
        ports:
        - containerPort: 8000
