kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greeter-server-ingress
spec:
  backend:
    serviceName: greeter-server
    servicePort: 8433
